# ai9_logic_2018

./: .gitignore  CMakeLists.txt  README.md
ai/: CMakeLists.txt  deadAI.cpp  emptyAI.cpp  routerSpeedAI.cpp
dlltest/: dlltest_main.cpp
doc/: .gitignore  AI9_2018_Compile.md  AI9_2018_Documentation.md  AI9_2018_Instructions.md
judger/: judger.cpp
src/: dllinterface.cpp  idmgr.cpp  jsoncpp.cpp  logic.cpp  mapinfo.cpp  uiapi.cpp  uinterface.cpp  unit.cpp
src/include/: dllinterface.h  idmgr.h  logic.h  mapinfo.h  unit.h
src/include/sdk/: actions.cpp  actions.h  defs.h  literals.h  randomizer.cpp  randomizer.h  router.cpp  router.h  sdk.cpp  sdk.h  vec2.h
src/include/sdk/strategy/: actionmaker.cpp  actionmaker.h  blind_item_strategy.cpp  escape_strategy.cpp  escape_strategy.h  focus_attack_strategy.cpp  focus_attack_strategy.h  patrol_strategy.cpp  patrol_strategy.h  randomized_attacker_strategy.cpp  randomized_attacker_strategy.h  stealth_strategy.cpp  stealth_strategy.h  strategy.h  tracer_strategy.cpp  tracer_strategy.h
src/include/ui/: uiapi.h  uinterface.h
src/miniz/: miniz.cpp  miniz.h
user/: CMakeLists.txt  playerAI.cpp
user/sdk/: actions.cpp  actions.h  defs.h  literals.h  randomizer.cpp  randomizer.h  router.cpp  router.h  sdk.h
user/sdk/strategy/: actionmaker.h  blind_item_strategy.cpp  blind_item_strategy.h  escape_strategy.cpp  focus_attack_strategy.cpp  focus_attack_strategy.h  patrol_strategy.cpp  patrol_strategy.h  randomized_attacker_strategy.cpp  randomized_attacker_strategy.h  stealth_strategy.cpp  stealth_strategy.h  strategy.h  tracer_strategy.cpp  tracer_strategy.h
